# SpreadSheetEs2

./: .gitignore  CMakeLists.txt  Cell.cpp  Cell.h  Interface.cpp  Interface.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Observer.h  Operation.cpp  Operation.h  Operations.cpp  Operations.h  Subject.h  Sum.cpp  Sum.h  Values.cpp  Values.h  main.cpp  version.h
test/: CMakeLists.txt  CellFixture.cpp  CellTest.cpp  OperationsFixture.cpp  OperationsTest.cpp  ValuesFixture.cpp  ValuesTest.cpp
test/lib/: README.md
test/lib/docs/: advanced.md
test/lib/docs/_layouts/: default.html
test/lib/docs/reference/: matchers.md
test/lib/googlemock/include/gmock/: gmock-matchers.h  gmock-spec-builders.h
test/lib/googlemock/include/gmock/internal/: gmock-internal-utils.h
test/lib/googlemock/src/: gmock-spec-builders.cc
test/lib/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h  gmock_output_test_.cc  gmock_test.cc
test/lib/googletest/include/gtest/: gtest-death-test.h  gtest-printers.h  gtest.h
test/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
test/lib/googletest/samples/: sample6_unittest.cc
test/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc
test/lib/googletest/test/: googletest-catch-exceptions-test.py  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-env-var-test_.cc  googletest-listener-test.cc  googletest-options-test.cc  googletest-output-test_.cc  googletest-param-test-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-shuffle-test_.cc  gtest-typed-test_test.cc  gtest-typed-test_test.h  gtest-unittest-api_test.cc  gtest_environment_test.cc  gtest_pred_impl_unittest.cc  gtest_repeat_test.cc  gtest_unittest.cc  gtest_xml_output_unittest_.cc
